--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           ruby-version: '3.1.2'
           bundler-cache: true
+        run: bundle install
 
       - name: Run RSpec Tests
         run: rake spec
